--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,8 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!--Import materialize.css-->
   <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
+  <script src="https://www.gstatic.com/firebasejs/7.15.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.15.1/firebase-analytics.js"></script>
   <script src="https://kit.fontawesome.com/1b1b17beec.js" crossorigin="anonymous"></script>
   <title>JOA</title>
 </head>
